2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Added Umbrello file.
* Added create.sql. It needs modifications.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Modified database configurations.
* Added Changelog file.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Created initial Rails structure.