@@ -1,4 +1,7 @@
 2009-05-01 Iuri Fernandes <iurifq@gmail.com>
+* Changed database configuration file config/database.yml.
+
+2009-05-01 Iuri Fernandes <iurifq@gmail.com>
 * Added Umbrello file.
 * Added create.sql. It needs modifications.
 
